# memalloc

./: CMakeLists.txt  Dockerfile  Justfile  README.md  main.c  memalloc.c  memalloc.h
src/: main.c  memalloc.c  memalloc.h
tests/: test_main.c  test_main.h
tests/allocation_tests/: test_array.c  test_basic.c  test_edge_cases.c  test_realloc.c  test_struct.c
tests/leak_tests/: test_array_leak.c  test_simple_leak.c  test_struct_leak.c
